auth-service/k8s/auth-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-auth-service
  namespace: auth-service
  labels:
    app: auth-service
    instance: app-auth-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: auth-service
      instance: app-auth-service
  template:
    metadata:
      labels:
        app: auth-service
        instance: app-auth-service
    spec:
      containers:
        - name: auth-service
          # image: auth-service:local # Local
          image: 370930247065.dkr.ecr.us-east-2.amazonaws.com/auth-service:latest # Nuvem
          resources:
            requests:
              cpu: "100m"
              memory: "64Mi"
            limits:
              cpu: "250m"
              memory: "128Mi"
          ports:
            - containerPort: 8001
          readinessProbe:
            httpGet:
              path: /health
              port: 8001
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8001
            initialDelaySeconds: 10
            periodSeconds: 15
